--- a/MEAN/TharnVision/package.json
+++ b/MEAN/TharnVision/package.json
@@ -19,7 +19,6 @@
   ],
   "author": "Tharnslair",
   "license": "MIT",
-
   "dependencies": {
     "jade": "~0.35.0",
     "express": "~3.4.4",
@@ -28,9 +27,11 @@
     "passport-local": "~0.1.6",
     "passport": "~0.1.17"
   },
-
   "bugs": {
     "url": "https://github.com/Tharnslair/Tharnode.com/issues"
   },
-  "homepage": "https://github.com/Tharnslair/Tharnode.com"
+  "homepage": "https://github.com/Tharnslair/Tharnode.com",
+  "devDependencies": {
+    "bower": "^1.3.9"
+  }
 }
